crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@event_fn_with_return_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/event_fn_with_return_fail.tapir
---
Error: Event handlers should not have a return type
   ╭─[event_fn_with_return_fail.tapir:1:1]
   │
 1 │ event fn foo(x: int) -> int {
   │ ──┬──                   ─┬─  
   │   ╰────────────────────────── 'foo' has been declared as an event handler
   │                          │   
   │                          ╰─── Expected no return type
   │ 
   │ Help: Either remove the return type, or change this to be a regular function
───╯
Error: Function should be returning 0 return values, but you are actually returning 1.
   ╭─[event_fn_with_return_fail.tapir:1:1]
   │
 1 │ event fn foo(x: int) -> int {
   │ ──┬──  
   │   ╰──── Function returns 0 values
 2 │     return x;
   │     ────┬────  
   │         ╰────── This has 1 return values
   │ 
   │ Note: Functions must return a fixed number of values
───╯
